# first-sample-project

./: CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: first_sample_project.tex  first_sample_project_pres.tex  task_paper.py
src/first_sample_project/: __init__.py
src/first_sample_project/analysis/: task_analysis.py
src/first_sample_project/data_management/: __init__.py  task_data_management.py
src/first_sample_project/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
