[metadata]
name = first_sample_project
description = first sample project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yehkaunhai/first_sample_project
author = Parth Sehgal
author_email = s02psehg@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/yehkaunhai/first_sample_project
    Documentation = https://github.com/yehkaunhai/first_sample_project
    Github = https://github.com/yehkaunhai/first_sample_project
    Tracker = https://github.com/yehkaunhai/first_sample_project/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/first_sample_project/_version.py
